# tinerator

./: .buildinfo  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPER.md  DockerUsage.md  Dockerfile  DockerfileFix  LICENSE  LICENSE.md  Makefile  README.md  api.html  api_gis.html  api_gis_geometry.html  api_gis_raster.html  api_meshing.html  api_meshing_mesh.html  api_meshing_sets.html  api_misc.html  basic.html  bld.bat  build.sh  environment.yml  genindex.html  index.html  installation.html  license.html  meta.yaml  mkdocs.yml  objects.inv  py-modindex.html  pydoc-markdown.yml  pyproject.backup.toml  pyproject.toml  pytest.ini  requirements.txt  search.html  (+5 more)
.github/workflows/: build.yml  ci-python.yml  coverage.yml  docker-image.yml  docker.yml  gh-pages.yml  poetry.yml
_docs/: pydoc-markdown.yaml
_modules/: index.html
_modules/tinerator/: example_data.html  logging.html
_modules/tinerator/gis/: geometry.html  geoutils.html  gis_tools.html  gis_triangulation.html  raster.html  watershed_delin.html
_modules/tinerator/meshing/: extrude_mesh.html  mesh.html  meshing_types.html  meshing_utils.html  sets.html  surface_mesh.html  triangulation.html
_sources/: api_gis_raster.rst.txt  api_meshing_mesh.rst.txt  basic.rst.txt  index.rst.txt  installation.rst.txt  user_guide.rst.txt
_sources/examples/: introduction.rst.txt
_sources/examples/workflow/: borden.rst.txt
_sources/user_guide/: contributing.rst.txt  index.rst.txt  installation.rst.txt
_static/: pygments.css
api/: gis.html  index.html  meshing.html  module.html
ci/: Dockerfile  Dockerfile_DEV  README.md  build_tinerator.sh
dev/jupyter-dash/: Dockerfile  docker-entrypoint.sh  environment.yml
docker/: Dockerfile  README.md  labextensions.txt
docs/: api.rst  api_gis.rst  api_meshing.rst  api_meshing_sets.rst  conf.py  index.rst  installation.rst  license.rst  pydoc-markdown.yaml
docs/_static/: VTKCone.js  vtk_example.html  vtk_example.js
docs/api/: api_gis_geometry.rst  api_meshing_sets.rst  api_misc.rst  gis.rst  index.rst  meshing.rst  module.rst
docs/config/_default/: config.toml  languages.toml  menus.en.toml  params.toml
docs/content/en/: _index.md
docs/content/test/: _index.md
docs/examples/: index.rst
docs/examples/snippets/: hillslope.rst
docs/examples/workflow/: borden.rst  simple.rst
docs/user_guide/: documentation.rst  index.rst  installation.rst
docs/workflows/: index.rst
example-data/: README.md
example-data/meshes/Surfaces/: fs_naive_bottom.avs  fs_naive_sides.avs  fs_naive_top.avs  generator_script.py  simple_surface.inp  simple_volume.inp  simple_volume_with_facesets.exo
example-data/meshes/avs/: simple_surface.inp
example-data/meshes/mpas/: delaware_local_2d.vtk  delaware_local_2d_mpas.nc
examples/: 1-quickstart.py  2D-visualization.py  3D-visualization.py  Borden.ipynb  README.rst  dashly.py  file-export.py  file-import.py  getting-started.ipynb  index.html  introduction.html  mesh-attributes.py  mesh-sets.py  meshing.py  open-book.py  rasters.py  simple-example.py  vectors.py  watershed-delineation.py
examples-old/: README.md  test.py
examples-old/00-load/: read-raster.py  read-shapefile.py
examples-old/01-gis-processing/: README.md
examples-old/02-meshing-2D/: README.md
examples-old/99-workflows/: simple-example.py
examples-old/notebooks/: README.md  Workflow-Advanced.ipynb
examples/00-load/: README.md  read-raster.py  read-shapefile.py
examples/03-meshing-3D/: README.md
examples/04-meshing-sets/: README.md
examples/10-plotting/: README.md
examples/99-workflows/: README.md  open-book.py  simple-example.py
examples/notebooks/: Borden-Workflow.ipynb  CaseStudy-OpenBook.ipynb  NewMexico-Workflow.ipynb  getting-started.ipynb
examples/snippets/: hillslope.html
examples/workflow/: borden.html  simple.html
joss-paper/: README.md  paper.bib  paper.md
src/tinerator/: __init__.py  _version.py  constants.py
src/tinerator/examples/: __init__.py
src/tinerator/gis/: geometry.py  geoutils.py  gis_tools.py  gis_triangulation.py  raster.py  watershed_delin.py
tests/: helper.py  pqt_webview.py  pytest.ini  test_gis.py  test_mesh_read.py  test_meshing.py  test_stack.py  test_tinerator.py  util.py
tests/_old/: dont_test_gis.py  dont_test_mesh_read.py  dont_test_meshing.py  dont_test_stack.py  helper.py
tinerator/: __about__.py  __init__.py  _exceptions.py  _version.py  _vtk_common.py  constants.py  dem_class.py  dump.py  example_data.py  logging.py  meshing.py  test.cpp
tinerator/dash/: __init__.py  create_app.py  gis_layout.py  rendering.py  server_constants.py  vtk_layout.py
tinerator/deprecated/: attributes.py  boundary.py  config.py  dem_class.py  dump.py  facesets.py  lg_infiles.py  lg_meshing.py  load.py  pack_points.py  plot.py  utilities.py  watershed_deliniation.py
tinerator/examples/: __init__.py  examples.py
tinerator/gis/: __init__.py  distance_maps.py  geometry.py  geoutils.py  gis_tools.py  gis_triangulation.py  raster.py  raster_boundary.py  utils.py  vector.py  watershed_delin.py
tinerator/meshing/: __init__.py  adjacency.py  dump_exodus.py  extrude_mesh.py  facesets_lg.py  hillslope_mesh.py  io.py  lagrit_helper.py  layering.py  layering_dev.py  mesh.py  mesh_attributes.py  mesh_metrics.py  meshing_types.py  meshing_utils.py  metrics.py  raster_to_surfmesh.py  readwrite.py  refined_triplane.py  refined_triplane_lg.py  sets.py  surface_mesh.py  triangulation.py  triangulation_gmsh.py  triangulation_jigsaw.py  triangulation_meshpy.py  triangulation_triangle.py  uniform_triplane.py  uniform_triplane_lg.py  util.py  write_exodusii_mesh.py
tinerator/visualize/: __init__.py  config.py  dash_tin.py  guess_environ.py  guiwebview.py  layout_2d.py  layout_3d.py  plot.py  plot_facesets.py  plot_sets.py  plotting_plotly.py  qt_app.py  schwarzwald_topographie.json  view_3d.py
tpls/: build-tpls-macports.sh  build-tpls.sh
user_guide/: contributing.html  index.html  installation.html
util/: Dockerfile  Dockerfile-tinerator
utilities/: format_code.sh  precommit.sh
(+56 files in other folders)
