[metadata]
name = tinerator
version = attr: tinerator._version.__version__
author = Daniel Livingston
author_email = daniel.livingston@live.com
description = Easy and powerful 3D mesh generation from geospatial data sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lanl/tinerator
keywords = meshing, 3d, gis, geospatial, mesh, generation
project_urls =
    Bug Tracker = https://github.com/lanl/tinerator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    shapely
    rich

[options.packages.find]
where=src
