[metadata]
name = tinerator
version = attr: tinerator._version.__version__
author = Daniel Livingston
author_email = daniel.livingston@live.com
description = Easy and powerful 3D mesh generation from geospatial data sources.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lanl/tinerator
keywords = meshing, 3d, gis, geospatial, mesh, generation
project_urls =
    Documentation = https://lanl.github.io/tinerator/
    Source = https://github.com/lanl/tinerator/
    Tracker = https://github.com/lanl/tinerator/issues
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
python_requires = >=3.6
include_package_data = True
package_dir =
    =src
install_requires = 
    importlib-metadata; python_version<"3.8"
    setuptools>=46.1.0
    setuptools_scm>=5
    tomlkit>=0.7.0,<2
    packaging>=20.7
    numpy
    shapely
    rich
    scipy
    fiona
    vtk>=9.0
    pyproj
    osgeo
    snowy
    richdem
    pyvista
    meshpy
    #gdal

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[aliases]
test=pytest
