[metadata]
name = tinerator
version = 0.9.1
author = Daniel Livingston, Los Alamos National Laboratory
author_email = daniel.livingston@live.com
description = "Intuitive and powerful unstructured geospatial mesh generation from GIS data."
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lanl/tinerator
project_url = 
    Documentation = https://lanl.github.io/tinerator
    Code Repository = https://github.com/lanl/tinerator
classifiers =
    Development Status :: 5 - Production/Stable
    #OSI Approved :: BSD License
    Operating System :: OS Independent
    Operating System :: MacOS
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: Visualization

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = find_namespace:
package_dir =
    = src
install_requires =
    importlib-metadata; python_version<"3.8"
    setuptools>=46.1.0
    setuptools_scm>=5
    tomlkit>=0.7.0,<2
    packaging>=20.7
    numpy>=1.19.0
    scipy>=1.0
    Fiona>=1.0
    pyproj>=3.0
    Shapely>=1.0
    snowy>=0.0.9
    pyshp>=2
    vtk>=9,<10
    pyvista>=0.30
    meshio>=4.0.0
    MeshPy>=2020.0
    plotly>=5.0
    rich>=10.0
    richdem>=0.3.0
    GDAL>=2.0.0
    kaleido>=0.2.0,<1.0.0
    xarray>=0.16.0,<1
    datashader>=0.13.0,<1
    colorcet>=2.0.0,<3

[aliases]
test=pytest

[options.packages.find]
where = src
exclude =
    tests

[options.package_data]
tinerator.examples = data/*

[options.extras_require]
test =
    pytest >= 6.2.2
    pycodestyle
    pytest-cov
all =
    %(test)s

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

## IMPORTANT: see here: https://gitlab.mpcdf.mpg.de/dboe/rna/-/blob/master/setup.cfg

[tool:pytest]
testpaths = tests
#addopts = --cov --cov-report xml --cov-report term --cov-report html
##minversion = 6.0
##addopts = -v
##-ra -q# --cov --cov-report html --cov-report term-missing
##testpaths = src/
##testpaths =
##    tinerator
## https://packaging-guide.openastronomy.org/en/latest/tests.html#running-doctests
